--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@remix-run/express": "^2.8.1",
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
+    "@types/express": "^4.17.21",
+    "cross-env": "^7.0.3",
+    "express": "^4.19.1",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
